# fee-splitter

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  foundry.toml  pyproject.toml
.github/workflows/: ci.yaml  unitary.yml
contracts/: ControllerMulticlaim.vy  FeeSplitter.vy  LPNClient.vyi  LPNRegistry.vyi  autobribe.vy
contracts/automation/: Autobribe.vy
contracts/fee_splitter/: Controller.vyi  ControllerFactory.vyi  ControllerMulticlaim.vy  DynamicWeight.vyi  FeeSplitter.vy  README.md
contracts/interfaces/: IDynamicWeight.vyi
contracts/manual/: IBribeLogic.vyi  IncentivesManager.vy
contracts/markets/: PaladinQuest.vyi  PaladinQuestLogic.vy  StakeDaoLogic.vy  StakeDaoMarket.vyi
scripts/: deploy_fee_splitter.ipynb
test/: conftest.py  test_simple.py
test/mocks/: MockVotingMarket.vy
test/unitary/: conftest.py  test_incentives_manager.py
tests/: conftest.py
tests/hypothesis/: README.md  conftest.py  strategies.py  utils.py
tests/hypothesis/fee_splitter/: stateful_base.py  test_fs_stateful_controllers.py  test_fs_stateful_receivers.py  test_fuzz_receivers.py
tests/hypothesis/fuzzing/: test_fuzz_receivers.py
tests/integration/: ICrvUSD.sol  IVotemarket.sol  IncentivesManager.t.sol  IntegrationTest.sol  StakeDaoLogic.t.sol  address_book.py  conftest.py
tests/integration/fee_splitter/: FeeSplitterTest.sol  UpdateControllers.t.sol  test_actual_controllers.py  test_fs_integration.py
tests/integration/quest/: IQuest.sol  (+3 more)
tests/mocks/: MockBribeLogic.vy  MockController.vy  MockControllerFactory.vy  MockDynamicWeight.vy  MockERC20.vy  MockPaladinQuest.vy  MockStakeDaoMarket.vy  MockVotingMarket.vy
tests/unitary/: conftest.py  test_incentives_manager.py  test_paladin_quest_logic.py  test_stakedao_logic.py
(+36 files in other folders)
