[tool.poetry]
name = "autobribe"
version = "0.1.0"
description = ""
authors = ["Curve.fi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
vyper = "0.4.0"
titanoboa = { git = "https://github.com/vyperlang/titanoboa.git", rev="83c6c51f1752f69ec0189a81521a26f550dc3905" }
snekmate = "0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[tool.poetry.group.scripts.dependencies]
tqdm = "^4.66.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"