[tool.poetry]
name = "fee-splitter"
version = "0.1.0"
description = ""
authors = ["Curve.fi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.6"
vyper = "0.4.0"
titanoboa = { git = "https://github.com/vyperlang/titanoboa.git", rev="4768207288ec8fb23a4817ae193bd707ab9d1e8f" }
snekmate = "0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-xdist = "^3.6.1"
mamushi = "0.0.4a1"

[tool.poetry.group.scripts.dependencies]
tqdm = "^4.66.5"
curve-dao = "^1.0.0"
jupyter = "^1.0.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
